# snakemake-report-plugin-metadata4ing

./: .gitignore  CLI.txt  Kratos.txt  README.md  Snake CLI.txt  Snakefile  pyproject.toml
examples/notebooks/: Smaple.ipynb
examples/simulation_1/: environment.yml  run_simulation.py
examples/simulation_2/: experiment.json  ro-crate-metadata.json  summary_0125.json
examples/simulation_3/: Snakefile  summary_025.json  summary_1.json
full simulation/: create_input_files.py  parameters_geo2fun2fine.json  report.ttl  summary_025.json  summary_05.json  summary_geo2fun2.json
full simulation/data/: input_0125.json  input_05.json  input_1.json  mesh_0125.msh  mesh_025.msh  mesh_05.msh  mesh_geo2fun2.msh  output_003125000001.pvtu  output_0125000001.pvtu  output_0125_p0_000000.vtu  output_025000001.pvtu  output_025_p0_000000.vtu  output_025_p0_000001.vtu  output_05000001.pvtu  output_05_p0_000000.vtu  output_1.vtk  output_1000001.pvtu  output_1_p0_000000.vtu  output_1_p0_000001.vtu  output_geo1fun2_p0_000000.vtu  output_geo1fun2_p0_000001.vtu  output_geo2fun2.vtk  output_geo2fun2000001.pvtu  output_geo2fun2_p0_000000.vtu  output_geo2fun2fine000000.pvtu  output_geo2fun2fine_p0_000000.vtu
sample_extractor/: my_extractor.py
simulation/: parameters_0125.json  parameters_05.json  parameters_geo1fun2.json  provenance.jsonld  report.jsonld  report.ttl  summary_003125.json  summary_00625.json  summary_0125.json  summary_025.json  summary_05.json  summary_1.json  summary_geo1fun2.json  summary_geo2fun2.json  summary_geo2fun2fine.json
simulation/data/: input_00625.json  input_geo1fun2.json  input_geo2fun2.json  mesh_00625.msh  mesh_1.msh  mesh_geo2fun2fine.msh  output_003125000000.pvtu  output_00625000000.pvtu  output_00625000001.pvtu  (+15 more)
tests/: test_plugin.py
(+219 files in other folders)
